# ASC-ODE

./: .gitmodules  CMakeLists.txt  CppTests.ipynb  output_alpha.txt  output_mass_spring.txt
demos/: test_alpha.cc  test_newmark.cc  test_ode.cc
mass_spring/: CMakeLists.txt  bind_mass_spring.cc  mass_spring.cc  mass_spring.h  mass_spring.ipynb  test_mass_spring.py
src/: Newton.h  nonlinfunc.h  ode.h
